[gd_scene load_steps=4 format=3 uid="uid://bdtneuck1hqpc"]

[ext_resource type="Script" path="res://Scripts/game_over.gd" id="1_81o4l"]

[sub_resource type="LabelSettings" id="LabelSettings_cbrdk"]
font_size = 54
font_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_ie7px"]
font_color = Color(0, 0, 0, 1)

[node name="GameWin" type="Node2D"]
script = ExtResource("1_81o4l")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 1287.0
offset_bottom = 723.0
color = Color(1, 1, 1, 0.443137)

[node name="Game Over Label" type="Label" parent="."]
offset_left = 413.0
offset_top = 218.0
offset_right = 706.0
offset_bottom = 292.0
text = "Game Win"
label_settings = SubResource("LabelSettings_cbrdk")

[node name="MainMenuButton" type="Button" parent="."]
offset_left = 422.0
offset_top = 379.0
offset_right = 664.0
offset_bottom = 444.0
text = "Exit to Main Menu"

[node name="MoneyLabel" type="Label" parent="."]
offset_left = 404.0
offset_top = 318.0
offset_right = 523.0
offset_bottom = 341.0
text = "Money Spent: 0"
label_settings = SubResource("LabelSettings_ie7px")

[node name="CarsLabel" type="Label" parent="."]
offset_left = 585.0
offset_top = 318.0
offset_right = 684.0
offset_bottom = 341.0
text = "Cars Killed: 0"
label_settings = SubResource("LabelSettings_ie7px")

[connection signal="pressed" from="MainMenuButton" to="." method="_on_main_menu_button_pressed"]
